2009-11-15 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/ETSocket.h:
	* Source/ETSocket.m: Added a -initWithFileHandle: initializier to
	ETSocket. Wrote a new ETListenSocket subclass to create server sockets
	and added corresponding delegate protocol. No SSL support yet.

2009-10-22  Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/runtime.h: Added a wrapper header which include the 
	Objective-C 2 runtime library functions, either from 
	objc/runtime.h on OS X or ObjectiveC2/runtime.h with the GNU runtime.
	

2009-09-25  Quentin Mathe <qmathe@club-internet.fr>

	EtoileFoundation now compiles on Solaris.
	* Source/NSFileManager+TempFile.m: Added a mkdtemp() implementation to 
	compile on recent Solaris versions (only very recent versions include 
	mkdtemp).
	* GNUmakefile: Tweaked to know where to look for openssl on Solaris.
	* Source/GNUmakefile: Declared _XOPEN_SOURCE test macro to allow us 
	to use functions such as strdup() (POSIX extension to the C standard 
	lib) on Solaris.

2009-07-27  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/ETClassMirror.h:
	* Source/ETClassMirror.m:
	(-instanceVariableMirrorsWithOwnerMirror:, 
	-allInstanceVariableMirrorsWithOwnerMirror:): Added.
	(-instanceVariableMirrors, -allInstanceVariableMirrors): Moved the 
	implementation into the two new methods mentioned above and updated to 
	now simply call those new methods.
	* Headers/ETObjectMirror.h:
	* Source/ETSourceMirror.m:
	(-instanceVariableMirrors, -allInstanceVariableMirrors): Modified to 
	now call the new methods added to ETClassMirror.
	* Headers/ETInstanceVariableMirror.h:
	* Source/ETInstanceVariableMirror.m:
	New ivar _cachedValueMirror.
	(-valueMirror, -cachedValueMirrorForValue:, -ownerObjectMirror): Added.
	(-initWithIvar:ownerMirror:, +mirrorWithIvar:ownerMirror:): Modified
	to include an extra 'ownerMirror' parameter.
	(-ownerMirror): Modified the return type to <ETMirror>.
	(-value, -setValue:): Updated to retrieve the owner with